--- a/src/components/ShoppingListDetail.css
+++ b/src/components/ShoppingListDetail.css
@@ -1,2 +1,3 @@
-.shoppingListDetail{background-color:var(--grey);padding:8px;border:3px solid var(--blue);-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
+.shoppingListDetail{background-color:var(--grey);padding:0px 8px 16px 8px;border:3px solid var(--blue);-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
 .shoppingListOwnerInner{padding:8px;margin-right:4px;margin-top:4px;border:2px solid var(--blue); -webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;background-color:#e9e9ed;height:55px;overflow:hidden;line-height:36px;}
+.shoppingListDetail h2, .shoppingListDetail h3, .shoppingListDetail p{margin-left:8px;margin-right:8px}
