--- a/src/components/ShoppingListDetail.css
+++ b/src/components/ShoppingListDetail.css
@@ -2,4 +2,4 @@
 .shoppingListOwnerInner{padding:8px;margin-right:4px;margin-top:4px;border:2px solid var(--blue); -webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;background-color:#e9e9ed;height:55px;overflow:hidden;line-height:36px;}
 .shoppingListDetail h2, .shoppingListDetail h3, .shoppingListDetail p{margin-left:8px;margin-right:8px}
 button{height: 35px;font-size: 16px;padding: 4px;cursor: pointer;}
-.activeFilter{font-weight:bold}
+.activeFilter{font-weight:bold;color: var(--blue);}
