--- a/src/components/ShoppingListItem.css
+++ b/src/components/ShoppingListItem.css
@@ -1,4 +1,4 @@
-.shoppingListItemInner{padding:8px;margin-right:4px;margin-top:4px;border:2px solid darkred; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;background-color: #d79c9c;height:60px;}
+.shoppingListItemInner{padding:8px;margin-right:4px;margin-top:4px;border:2px solid darkred;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;background-color:#d79c9c;min-height:60px;}
 .shoppingListItemInner.success{background-color:#a5fba5; border:2px solid green;}
 .shoppingListItemInner button {width:35px;height:35px;font-size:20px;padding:4px;}
 .shoppingListItemInner button:hover{cursor:pointer;}
