--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,12 @@ h5,.h5{font-size:16px}
 h6,.h6{font-size:14px}
 #result{padding: 32px}
 .align-right{text-align:right;}
+.align-center{text-align:center;}
 .w-100{width:100%;max-width:100%}
 .w-180p{width:180px;max-width:100%}
-
+button{border:1px solid #555;background-color:#e9e9ed; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;}
+button:hover{background-color:#ccc;}
+input, select{margin: 4px; padding: 3px;}
 @media only screen and (max-width: 48em) {
 	body{font-size:14px;}
 	h1,.h1{font-size:22px;text-align:center;}
